adiciona CSS para paginas home, about, contact e product

--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,6 +1,6 @@
-.contact {
+.product {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: rgb(120, 181, 120);
+  background-color: rgb(249, 174, 76);
 }
