--- a/components/Description/Description.module.css
+++ b/components/Description/Description.module.css
@@ -9,6 +9,7 @@
 
 .descriptionTitle {
   text-align: left;
+  color: blanchedalmond;
 }
 .descriptionTitle h2 {
   font-size: 5.2rem;
@@ -21,6 +22,7 @@
 }
 
 .descriptionAbout p{
+  color: rgb(255, 255, 255);
   margin-top: 0;
   margin-bottom: 1rem;
   opacity: 1;
