altera className na pagina about

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,6 +1,6 @@
 .about {
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  background-color: rgb(184, 94, 165);
+  background-color: rgb(139, 93, 130);
 }
