--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,6 +1,5 @@
 .contact {
-  height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(120, 181, 120);
 }
