--- a/components/WhatWeDo/WhatWeDo.module.css
+++ b/components/WhatWeDo/WhatWeDo.module.css
@@ -4,6 +4,12 @@
   align-items: center;
   justify-content: center;
 }
+@media (max-width: 1024px) {
+  .whatWeDo{
+    justify-content: flex-start;
+    padding: 25px 25px;
+  }
+}
 
 .container {
   max-width: 1020px;
@@ -20,6 +26,11 @@
   font-size: 55px;
   margin: 0;
 }
+@media (max-width: 1024px) {
+  .header h2 {
+    font-size: 40px;
+  }
+}
 
 .headerContainer{
   display: flex;
@@ -30,12 +41,26 @@
 .headerContainer p {
   padding-right: 40px;
 }
+@media (max-width: 1024px) {
+  .headerContainer {
+    flex-direction: column;
+  }
+  .headerContainer p {
+    padding-right: 0;
+    font-size: 16px;
+  }
+}
 
-.more  {
+.more {
   width: 30%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+@media (max-width: 1024px) {
+  .more {
+    justify-content: flex-start;
+  }
 }
 .more a {
   display: flex;
@@ -50,12 +75,29 @@
 .content {
   display: flex;
 }
+@media (max-width: 1024px) {
+  .content {
+    flex-direction: column;
+  }
+}
+
 
 .box {
   padding-right: 50px;
 }
+@media (max-width: 1024px) {
+  .box {
+    padding-right: 0;
+  }
+}
 .box h3 {
   font-size: 25px;
+}
+@media (max-width: 1024px) {
+  .box p {
+    padding-right: 0;
+    font-size: 16px;
+  }
 }
 
 .learnMore {
@@ -63,6 +105,11 @@
   display: flex;
   padding-top: 40px;
   padding-bottom: 30px;
+}
+@media (max-width: 1024px) {
+  .learnMore {
+    padding: 0;
+  }
 }
 .learnMore a{
   display: flex;
