--- a/components/Members/Members.module.css
+++ b/components/Members/Members.module.css
@@ -11,6 +11,16 @@
   letter-spacing: -2.54px;
   color: blanchedalmond;
 }
+@media (max-width: 1024px) {
+  .members {
+    margin: 0;
+    padding: 0 25px;
+  }
+  .membersTitle h4 {
+    font-size: 2.5rem;
+    margin: 40px 0
+  }
+}
 
 .boxMembers {
   display: flex;
@@ -27,13 +37,35 @@
 
   color: rgb(255, 255, 255);
 }
+@media (max-width: 1024px) {
+  .box {
+    margin: 0 13px;
+    width: 100%;
+  }
+}
 .box:nth-child(3n) {
   margin-right: 0;
+}
+@media (max-width: 1024px) {
+  .box:nth-child(3n) {
+    margin-right: 13px;
+  }
 }
 .box img {
   margin: 30px 0;
 }
+/* @media (max-width: 1024px) {
+  .box img{
+    width: 200px;
+  }
+} */
 .box p {
+  text-align: center;
   display: flex;
   justify-content: center; 
+}
+@media (max-width: 1024px) {
+  .box p {
+    padding-bottom: 20px;
+  }
 }
