--- a/components/BigHeader/BigHeader.module.css
+++ b/components/BigHeader/BigHeader.module.css
@@ -2,13 +2,30 @@
   margin-bottom: 7rem;
   margin: 0 55px 0 55px;
 }
+@media (max-width: 1024px) {
+  .bigHeader {
+    padding: 25px 25px;
+    margin: 0;
+  }
+}
 
 .header h2 {
   font-size: 5.2rem;
   margin: 0;
   margin-bottom: 2.4rem;
 }
+@media (max-width: 1024px) {
+  .header h2 {
+    margin-bottom: 1.5rem;
+  }
+}
+
 .header p {
   margin: 0;
   margin-bottom: 1rem;
+}
+@media (max-width: 1024px) {
+  .header h2 {
+    font-size: 2.5rem ;
+  }
 }
