--- a/components/TextTwoTextColums/TextTwoTextColums.module.css
+++ b/components/TextTwoTextColums/TextTwoTextColums.module.css
@@ -1,9 +1,20 @@
 .txtColums {
+  display: flex;
   margin: 0 55px 0 55px;
+}
+@media (max-width: 1024px) {
+  .txtColums {
+    margin: 0 25px 0 25px;
+  }
 }
 
 .twoColums {
   display: flex;
+}
+@media (max-width: 1024px) {
+  .twoColums {
+    flex-direction: column;
+  }
 }
 
 .txt1 h3{
@@ -14,15 +25,30 @@
   margin-bottom: 0;
   margin-top: 90px;
 }
+@media (max-width: 1024px) {
+  .txt1 h3{
+    margin-top: 50px;
+  }
+}
 
 .twoColums .txt2 {
   width: 100%;
   padding: 20px 0;
   padding-right: 30px
 }
+@media (max-width: 1024px) {
+  .twoColums .txt2 {
+    padding: 0;
+  }
+}
+
 .twoColums .txt3 {
   width: 100%;
   padding: 20px 0 ;
   padding-left: 30px;
-
+}
+@media (max-width: 1024px) {
+  .twoColums .txt3 {
+    padding: 0;
+  }
 }
