--- a/components/TitleTextImage/TitleTextImage.module.css
+++ b/components/TitleTextImage/TitleTextImage.module.css
@@ -1,9 +1,20 @@
 .titleTextImage{
   margin: 55px 55px 0 55px;
 }
+@media (max-width: 1024px) {
+  .titleTextImage{
+    margin: 0px 25px 0 25px;
+  }
+}
 
 .containertxt {
   display: flex;
+}
+@media (max-width: 1024px) {
+  .containertxt {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 .txt1 h3 {
@@ -17,4 +28,11 @@
 
 .imgb2b img {
   width: 500px;
+}
+@media (max-width: 1024px) {
+  .imgb2b img  {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+  }
 }
