--- a/components/ContactForm/ContactForm.module.css
+++ b/components/ContactForm/ContactForm.module.css
@@ -1,23 +1,18 @@
 
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: 55px;
-  margin-left: 55px;
+.contactForm {
 }
 @media (max-width: 1024px) {
-  .container {
+  .contactForm {
     padding: 0;
     margin: 0 25px;
   }
 }
 
-
 .row {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 30px;
+  padding: 20px 0px;
   justify-content: center;
 }
 @media (max-width: 1024px) {
