--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -3,3 +3,14 @@
   display: flex;
   flex-direction: column;
 }
+.contact p {
+  font-size: 1rem;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+@media (max-width: 1024px) {
+  .contact p {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+};
